--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Concert+One&family=Inconsolata&display=swap");
+
+
+*{
+  box-sizing: border-box;
+}
+
+html{
+  font-size:20px;
+}
+
+html,
+button{
+  font-family: 'Concert One', cursive;
+}
+
+body{
+  margin: 0;
+}
+
+a{
+  text-decoration: none;
+}
