--- a/frontend/src/app/components/pages/home/home.component.html
+++ b/frontend/src/app/components/pages/home/home.component.html
@@ -4,7 +4,27 @@
       <img [src]="item.imageUrl" [alt]="item.name"/>
       <div class="content">
         <div class="name">
-          {{item.name}}
+          {{ item.name }}
+        </div>
+        <span class="favorite {{ item.favorite? ' ':'not'}}">
+          <3
+        </span>
+      </div>
+      <div class="product-item-footer">
+        <div class="origins">
+          <span *ngFor="let origin of item.origins">
+            {{origin}}
+          </span>
+        </div>
+
+        <div class="work-time">
+          <span>Takes about: </span>
+          {{ item.workTime }}
+        </div>
+        <div class="price">
+          <span>
+            {{ item.price | currency }}
+          </span>
         </div>
       </div>
     </a>
