--- a/frontend/src/app/components/pages/item-page/item-page.component.html
+++ b/frontend/src/app/components/pages/item-page/item-page.component.html
@@ -22,6 +22,6 @@
         {{ item.price | currency }}
       </span>
     </div>
-    <button>Add To Cart</button>
+    <button (click)="addToCart()">Add To Cart</button>
   </div>
 </div>
