--- a/frontend/src/app/components/pages/home/home.component.css
+++ b/frontend/src/app/components/pages/home/home.component.css
@@ -37,7 +37,7 @@ li a img{
 }
 
 
-.product-item-footer{
+.product-cup-footer{
   display:flex;
   justify-content: space-between;
   align-items: flex-start;
