updated cart service to work on add to cart button functionality

--- a/frontend/src/app/components/pages/cup-page/cup-page.component.html
+++ b/frontend/src/app/components/pages/cup-page/cup-page.component.html
@@ -22,6 +22,8 @@
         {{ cup.price | currency }}
       </span>
     </div>
-    <button (click)="addToCart()">Add To Cart</button>
+    <button (click)="addToCart()">
+      Add To Cart
+    </button>
   </div>
 </div>
