Updated Cart functionality and header badge functionality

--- a/frontend/src/app/components/pages/cart-page/cart-page.component.html
+++ b/frontend/src/app/components/pages/cart-page/cart-page.component.html
@@ -34,9 +34,9 @@
 </ul>
   <div class="checkout">
     <div>
-      <div class="cups-count">{{cart.totalCount}}</div>
+      <div class="cup-count">{{cart.totalCount}}</div>
       <div class="total-price">{{cart.totalPrice | currency}}</div>
     </div>
-    <a routerLink="/checkout">Proceed to Checkout</a> -->
+    <a routerLink="/checkout">Proceed to Checkout</a>
   </div>
 </div>
